fix(wearable) Make scrollbar visible on VirtualListSimple
Problem:
Scrollbar in circle version was not visible.
On rectangle where Scrollview is not available there was an exception on
list update.

Solution:
Structure of scrollbar was correctly built in SVG but had wrong colors.
Added condition to eliminate exception.
Start render loop on rotary.

Verification:
Samples for virtual list on wearable in circle and rectangle mode.

Reviewed-on: http://AMDC2476:8080/160
Tested-by: Jenkins

--- a/tau/src/css/profile/wearable/changeable/common/util.scrolling.less
+++ b/tau/src/css/profile/wearable/changeable/common/util.scrolling.less
@@ -1,5 +1,5 @@
 @scrollbar_thickness: 10px;
-@scrollbar_background: rgba(0, 0, 0, 0.2);
+@scrollbar_background: rgba(255, 255, 255, 0.2);
 
 @scrollthumb_length: 10px;
 @scrollthumb_background: rgb(0, 157, 228);
@@ -12,6 +12,7 @@
 	opacity: 0;
 
 	.scrolling-scrollthumb {
+		stroke: @scrollthumb_background;
 		background-color: @scrollthumb_background;
 		position: absolute;
 	}
